# url-shortener

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run_server.sh
tests/: locustfile.py  test_shortener.py
url_shortener/: __init__.py  commands.py  main.py  models.py  settings.py  utilities.py  views.py
url_shortener/static/: form_handling.js
url_shortener/templates/: index.html
